--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-3 pt-2">
-        <h1><%= @user.username.capitalize %></h1>
+        <h1><%= @user.first_name.capitalize %></h1>
       </div>
     </div>
     <div class="row">
