fixed Typos in Home page, Fixed cloudinary, maintained aspect ratio for uploaded sneaker.

--- a/app/views/sneakers/new.html.erb
+++ b/app/views/sneakers/new.html.erb
@@ -8,6 +8,7 @@
           <%= f.input :price %>
           <%= f.input :size %>
           <%= f.input :condition, collection: ['New', 'Used'] %>
+          <%= f.input :description %>
           <%= f.input :photo, as: :file %>
           <%= f.submit "Add Sneaker", class: "b"%>
         <% end %>
