--- a/app/assets/stylesheets/components/_bg_card.scss
+++ b/app/assets/stylesheets/components/_bg_card.scss
@@ -1,17 +1,20 @@
-body{
-  background-color: #1A1423;
+body {
+  background-color: #1a1423;
 }
 
 .bg {
   /* The image used */
-  background-image:
-  linear-gradient(45deg, rgba(161, 161, 146, 0.4), rgba(244, 238, 240, 0.3)), url(
-'https://source.unsplash.com/updW-QUccFE');
+  background-image: linear-gradient(
+      45deg,
+      rgba(161, 161, 146, 0.4),
+      rgba(244, 238, 240, 0.3)
+    ),
+    url("https://source.unsplash.com/updW-QUccFE");
 
   /* Full height */
   height: 100vh;
   position: sticky;
- top: 0;
+  top: 0;
 
   /* Center and scale the image nicely */
   background-position: center;
@@ -21,14 +24,17 @@ body{
 
 .user-bg {
   /* The image used */
-  background-image:
-  linear-gradient(45deg, rgba(161, 161, 146, 0.4), rgba(244, 238, 240, 0.3)), url(
-'https://source.unsplash.com/Ao1AP2UvVnE');
+  background-image: linear-gradient(
+      45deg,
+      rgba(161, 161, 146, 0.4),
+      rgba(244, 238, 240, 0.3)
+    ),
+    url("https://source.unsplash.com/Ao1AP2UvVnE");
 
   /* Full height */
   height: 100vh;
   position: sticky;
- top: 0;
+  top: 0;
 
   /* Center and scale the image nicely */
   background-position: center;
@@ -38,14 +44,37 @@ body{
 
 .transaction-bg {
   /* The image used */
-  background-image:
-  linear-gradient(45deg, rgba(161, 161, 146, 0.4), rgba(244, 238, 240, 0.3)), url(
-'https://source.unsplash.com/ezdrvzA1hZw');
+  background-image: linear-gradient(
+      45deg,
+      rgba(161, 161, 146, 0.4),
+      rgba(244, 238, 240, 0.3)
+    ),
+    url("https://source.unsplash.com/ezdrvzA1hZw");
 
   /* Full height */
   height: 100vh;
   position: sticky;
- top: 0;
+  top: 0;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.formbg {
+  /* The image used */
+  background-image: linear-gradient(
+      45deg,
+      rgba(161, 161, 146, 0.4),
+      rgba(244, 238, 240, 0.3)
+    ),
+    url("https://source.unsplash.com/updW-QUccFE");
+
+  /* Full height */
+  height: 100vh;
+  position: sticky;
+  top: 0;
 
   /* Center and scale the image nicely */
   background-position: center;
