--- a/app/views/sneakers/show.html.erb
+++ b/app/views/sneakers/show.html.erb
@@ -18,13 +18,11 @@
       <p>Size <%= @sneaker.size %></p>
       <p>Owner: <%= @sneaker.user.first_name %></p>
 
-      <%= link_to "Back", brand_sneakers_path(@sneaker.brand), class:"glow-on-hover"%>
-      <%= link_to "Home", root_path, class:"glow-on-hover" %>
+      <%= link_to "My Collection", user_path(current_user), class:"glow-on-hover" %>
 
       <% if @sneaker.user != current_user %>
         <%= link_to "Buy Now", new_sneaker_transaction_path(@sneaker), class:"glow-on-hover" %>
       <% end %>
-
     </div>
 
   </div>
