--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
         <div class="col-9">
           <h1 class="neon">SNEAKERHEADS</h1>
           <h2 class="mt-3">The Place Where SneakerHeads Gather</h2>
-          <button class="glow-on-hover" type="button"><%= link_to "LASTEST ARRIVALS", sneakers_path %></button>
+          <button class="glow-on-hover" type="button"><%= link_to "LATEST ARRIVALS", sneakers_path %></button>
         </div>
       </div>
     </div>
