--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -120,3 +120,21 @@
   position: relative;
   top: 50px;
 }
+
+// Transaction-new-card
+.transaction-new-card {
+  width: 650px;
+  height: 700px;
+  background-color: rgba($color: #c3c3c3, $alpha: 0.4);
+  padding: 16px;
+  border-radius: 16px;
+  box-shadow: 16px;
+  position: relative;
+  top: 30px;
+
+}
+
+.transaction-new-card button {
+  position: relative;
+  top: 50px;
+}
