--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,11 +1,11 @@
 <%# Purchase page %>
 <div class="transaction-bg">
-  <div class="container transaction-card">
-    <div class="row p-2 d-flex justify-content-center">
+  <div class="container transaction-new-card">
+    <div class="row p-2 justify-content-center">
       <h2>Purchase Details</h2>
       <%# photo of transacted shoe %>
-      <div class="col-8">
-        <%= image_tag "airjordon.png", alt: "Nike shoe", width: 550, height: 350 %>
+      <div class="col-12">
+        <%= image_tag "airjordon.png", alt: "Nike shoe", width: 550, height: 250 %>
       </div>
     </div>
     <div class="row">
@@ -16,60 +16,60 @@
           <%# Transaction id %>
           <div class="row">
             <div class="col-12">
-              <h2>Brand: <%= @sneaker.brand %></h2>
+              <h4>Brand: <%= @sneaker.brand %></h4>
             </div>
           </div>
           <%# Model %>
-           <div class="row d-flex flex-start mt-5">
+           <div class="row d-flex flex-start mt-2">
             <div class="col-3">
-              <h3>Model:</h3>
+              <h4>Model:</h4>
             </div>
             <div class="col-8">
-              <h3><%= @sneaker.model %></h3>
+              <h4><%= @sneaker.model %></h4>
             </div>
           </div>
           <%# Sneaker id %>
           <div class="row d-flex flex-start mt-2">
             <div class="col-5">
-              <h3>Sneaker ID:</h3>
+              <h4>Sneaker ID:</h4>
             </div>
             <div class="col-5">
-              <h3><%= @sneaker.id %></h3>
+              <h4><%= @sneaker.id %></h4>
             </div>
           </div>
           <%# Price %>
           <div class="row d-flex flex-start mt-2">
             <div class="col-3">
-              <h3>Price:</h3>
+              <h4>Price:</h4>
             </div>
             <div class="col-5">
-              <h3><%= @sneaker.price %></h3>
+              <h4><%= @sneaker.price %></h4>
             </div>
           </div>
           <%# Size %>
           <div class="row d-flex flex-start mt-2">
             <div class="col-3">
-              <h3>Size:</h3>
+              <h4>Size:</h4>
             </div>
             <div class="col-5">
-              <h3><%= @sneaker.size %></h3>
+              <h4><%= @sneaker.size %></h4>
             </div>
           </div>
           <%# Date %>
           <div class="row d-flex flex-start mt-2">
             <div class="col-3">
-              <h3>Date:</h3>
+              <h4>Date:</h4>
             </div>
             <div class="col-9">
               <h4>26 June 2022, 0900am </h4>
             </div>
           </div>
-          <div class="row">
+          <div class="row ">
             <%= simple_form_for [ @sneaker, @transaction ] do |f| %>
               <%= f.input :sneaker_id, :as => :hidden, :input_html => { :value => @sneaker.id }  %>
               <%= f.input :seller_id, :as => :hidden, :input_html => { :value => @sneaker.user.id }  %>
               <%= f.input :buyer_id, :as => :hidden, :input_html => { :value => current_user.id }  %>
-              <%= f.submit "Confirm Purchase", class: "b" %>
+              <%= f.submit "Confirm Purchase", class: "b d-flex justify-content-center" %>
             <% end %>
           </div>
         </div>
