Front end for add shoe form improved. Optional - made navbar sticky.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -89,6 +89,6 @@
 
 <%# cloudinary not working will use cl_image_tag once it is working %>
 <%# <% if sneaker.photos.attached? %>
-<%# <% sneaker.photos.each do |photo| %> %>
-  <%# <%= cl_image_tag photo.key, height: 250, width: 200, crop: :fill %> %>
+<%# <% sneaker.photos.each do |photo| %>
+  <%# <%= cl_image_tag photo.key, height: 250, width: 200, crop: :fill %>
   <%# <% end %>
