--- a/app/views/sneakers/new.html.erb
+++ b/app/views/sneakers/new.html.erb
@@ -1,4 +1,4 @@
-<div id="simpleform">
+<div class="container addsneaker-card">
   <div class= "d-flex align-items-center justify-content-center">
     <div class= "row" justify-content-center form >
       <div class="mb-3">
