--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -126,6 +126,7 @@
   height: 700px;
   background-color: rgba($color: #c3c3c3, $alpha: 0.4);
   padding: 8px;
+}
 
 // Transaction-new-card
 .transaction-new-card {
@@ -137,7 +138,6 @@
   box-shadow: 16px;
   position: relative;
   top: 30px;
-
 }
 
 .transaction-new-card button {
