changed hypertext to white

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -89,7 +89,7 @@ a:link {
 }
 
 a:visited {
-  // color: #ffffff;
+  color: #ffffff;
 }
 
 a:focus {
@@ -101,7 +101,7 @@ a:hover {
 }
 
 a:active {
-  // background: #ffffff;
+  background: #ffffff;
 }
 .glow-on-hover {
   width: 220px;
