updated my collections page and added text white to my collection

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
             <%= image_tag "https://source.unsplash.com/N6Rfv9z1HH0/40x40", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "My Profile", user_path(current_user), class: "dropdown-item text-black" %>
-              <%= link_to "My Collection", user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "My Collection", user_path(current_user), class: "dropdown-item text-black" %>
               <%= link_to "My Transactions", user_transactions_path(current_user), class: "dropdown-item text-black" %>
               <%= link_to "Settings", "#", class: "dropdown-item text-black" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item text-black"  %>
