changed button css

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -21,7 +21,7 @@
 
 // Sneaker-card button
 .s-btn {
-  background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+  background-image: linear-gradient(90deg, #002bff 0%, #7a00ff 35%, #00ffd5 100%);
   text-decoration: none;
   border: none;
   color: white;
