--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -61,7 +61,7 @@
               <h4>Date:</h4>
             </div>
             <div class="col-9">
-              <h4>26 June 2022, 0900am </h4>
+              <h4><%= @transaction.created_at %></h4>
             </div>
           </div>
           <div class="row ">
