updated navbar and button style

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,12 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: #694a97;
+  background: #120219;
 
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
-  background-color: #A05C7B;
+  // background-color: #A05C7B;
 }
 
 .navbar-lewagon .navbar-brand img {
