--- a/app/views/sneakers/show.html.erb
+++ b/app/views/sneakers/show.html.erb
@@ -1,15 +1,15 @@
 <%# Sneaker Details page %>
 <div class="container">
   <div class="row">
+
     <div class="col-6">
       <div class="sneaker-images">
         <% if @sneaker.photo.attached? %>
           <%= cl_image_tag @sneaker.photo.key, height: 300, width: 400, crop: :fill%>
-        <% else %>
-
         <% end %>
       </div>
     </div>
+
     <div class="col-6">
       <h1><%= @sneaker.brand %></h1>
       <h2>$<%= @sneaker.price %></h2>
@@ -17,10 +17,15 @@
       <p><%#= @sneaker.description %></p>
       <p>Size <%= @sneaker.size %></p>
       <p>Owner: <%= @sneaker.user.first_name %></p>
-      <%= link_to "My Collection", user_path(current_user), class:"glow-on-hover" %>
+
+      <%= link_to "Back", brand_sneakers_path(@sneaker.brand), class:"glow-on-hover"%>
+      <%= link_to "Home", root_path, class:"glow-on-hover" %>
+
       <% if @sneaker.user != current_user %>
         <%= link_to "Buy Now", new_sneaker_transaction_path(@sneaker), class:"glow-on-hover" %>
       <% end %>
+
     </div>
+
   </div>
 </div>
